03-node-app/01-deploy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: nginx-node
  labels:
    app: nginx-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-node
  template:
    metadata:
      labels:
        app: nginx-node
    spec:
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 20Mi

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf-node-app
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jakubhajek/nodejs-backend:latest
          ports:
            - name: web
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 20Mi
